--- a/app/views/my_sales2l/index.html.erb
+++ b/app/views/my_sales2l/index.html.erb
@@ -1,33 +1,27 @@
-<div id="chart" style="width:600px;height:300px;"></div> 
+<div class="g640 inside">
+<div id="chart" style="width:600px;height:300px;margin-right:auto;margin-left:auto;"></div> 
 <script id="source" language="javascript" type="text/javascript"> 
-$(function () {
-	
-	var d = <%= my_sales2l_chart(current_user).to_json %>;
-
-	
-	
-    $.plot($("#chart"), [
-
-        {
-	        label: "Targets",
-            data: d[0],
-            lines: { show: true, steps: true, fill: true, lineWidth: 0}
-        },
-        {
-	        label: "Bookings",
-            data: d[1],
-            bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: 0 }
-        },
-        {
-	        label: "Forecast",
-            data: d[2],
-            bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: 0 }
-        }
-    ],
- { xaxis: 
-	{mode: "time",
-	 min: d[3],
-	 max: d[4],
-	 ticks: 5 }});
-});
+  $(function () {
+	var d = <%= bft_chart(current_user).to_json %>;
+	var data = [	  
+	  { label: "Targets", data: d[0], lines: { show: true, steps: true, lineWidth: 0, fill: .3 }, color: "#333" },
+	  { label: "Forecast", data: d[2], bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: .5, fill: 1 }, color: "#C20C0C" },
+	  { label: "Bookings", data: d[1], bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: .5, fill: 1 }, color: "#333" }
+	];
+    $.plot($("#chart"), data, {
+	  xaxis: { mode: "time", min: d[3], max: d[4], ticks: 5 },
+	  legend: { show: false }
+    });
+  });
 </script>
+</div>
+<div class="g320" style="margin-top:1em;">
+	<h1>
+		<span style="color:#333">Bookings</span><br>
+		<span style="color:#c20c0c">Forecast</span><br>
+		<span style="color:#B2B2B2">Targets</span>
+	</h1>	
+
+	<%= link_to 'Set Targets', polymorphic_path([current_user, :targets]) %>
+</div>
+<div class="clear">&nbsp;</div>
