--- a/app/views/layouts/red.html.erb
+++ b/app/views/layouts/red.html.erb
@@ -3,9 +3,15 @@
 <head>
   <title>Sales2l</title>
   <%= stylesheet_link_tag 's2l_red.css', "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.2/themes/cupertino/jquery-ui.css", 'slick.grid.css', 'superfish_red.css' %>
-  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'hoverIntent.js', 'superfish.js', 'application.js' %>
+  <%= javascript_include_tag 'jquery-1.4.2.min.js', 'jquery.field.js', 'jquery.calculation.js', 'rails.js', 'jquery-ui-1.8.2.custom.min.js', 'jquery.autocomplete.js', 'jquery.flot.min.js', 'jquery.event.drag-2.0.min.js', 'slick.grid.js', 'hoverIntent.js', 'superfish.js', 'application.js', 'nested_form.js' %>
 	<!--[if IE]><%= javascript_include_tag 'excanvas.compiled.js' %><![endif]-->
   <%= csrf_meta_tag %>
+
+
+
+
+
+
 </head>
 <body>
   <div class="main">	
@@ -35,6 +41,7 @@
 		  		<li><%= link_to "Users", users_url %></li> 
 		  		<li><%= link_to "Customers", customers_url %></li> 
 		  		<li><%= link_to "Confidences", confidences_url %></li> 
+		  		<li><%= link_to "Products", products_url %></li> 
 		  	  </ul>
 		  	</li>
 		  </ul>
