--- a/public/stylesheets/s2l_red.css
+++ b/public/stylesheets/s2l_red.css
@@ -463,14 +463,18 @@ form label.radio {
   font-weight: normal;
 }
 
-form label.check {
+.check label {
   float: none;
   text-align: left;
   margin: 0px 2px;
-  font-weight: normal;
+  font-weight: normal;	
 }
 
 form div.radio {
+	display: inline-block;
+}
+
+form div.check {
 	display: inline-block;
 }
 
@@ -481,9 +485,7 @@ form div.line_items {
 form .fields {
 	margin-bottom: 1em;
 }
-form input[type='checkbox'] {
-	margin-left: 193px;
-}
+
 
 form input[type='submit'] {
 	display: inline-block;
@@ -492,6 +494,7 @@ form input[type='submit'] {
 .hint {
 	margin-left: 193px;
 }
+
 .inactive {
     background-color: #EEE;
     color: #999;
