--- a/app/views/opportunities/index.html.erb
+++ b/app/views/opportunities/index.html.erb
@@ -21,7 +21,7 @@
 			<td><%= link_to truncate(opportunity.customer.name, :length => 15, :separator => ' '), opportunity.customer %></td>
 			<td><%= link_to truncate(opportunity.name, :length => 30, :separator => ' '), opportunity %></td>
 			<td><%= opportunity.status.humanize %></td>
-			<td style="text-align:right"><%= number_to_currency(opportunity.order_value, :precision => 0) %></td>
+			<td style="text-align:right"><%= number_to_currency(opportunity.m_order_value, :precision => 2) %></td>
 			<td style="text-align:center"><%= opportunity.updated_at.to_date %></td>
 			<td><%= opportunity.user.nickname %></td>
 			<% if can? :update, Opportunity %> 
