--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,30 +1,61 @@
 <div class="g640 inside">
 <div id="chart" style="width:600px;height:300px;margin-right:auto;margin-left:auto;"></div> 
-<script id="source" language="javascript" type="text/javascript"> 
-  $(function () {
-	var d = <%= @current_account.bft_chart(@bookings, @forecast, @current_account).to_json %>;
-	var data = [	  
-	  { label: "Targets", data: d[0], lines: { show: true, steps: true, lineWidth: 0, fill: .3 }, color: "#333" },
-	  { label: "Forecast", data: d[2], bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: .5, fill: 1 }, color: "#C20C0C" },
-	  { label: "Bookings", data: d[1], bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: .5, fill: 1 }, color: "#333" }
-	];
-    $.plot($("#chart"), data, {
-	  xaxis: { mode: "time", min: d[3], max: d[4], ticks: 5 },
-	  legend: { show: false }
-    });
-  });
-</script>
+	<script id="source" language="javascript" type="text/javascript"> 
+	  $(function () {
+		var d = <%= @current_account.bft_chart(@bookings, @forecast, @current_account).to_json %>;
+		
+		$("#chart_switcher").find("input").click(setForecastSeries);
+		
+		function setForecastSeries () {
+	      var forecastSeries;
+	      var weight = $("input[name=weight]:checked").val(); 	  
+	      var freshness = $("input[name=freshness]:checked").val(); 	  
+	  
+		  if (weight == "weighted" && freshness == "fresh") 
+			{forecastSeries = d[4];}
+		  else if (weight == "unweighted" && freshness == "fresh")
+		    {forecastSeries = d[5];}
+		  else if (weight == "weighted" && freshness == "stale")
+		    {forecastSeries = d[6];}
+		  else
+		    {forecastSeries = d[7];}
+		
+		  var data = [	  
+	        { label: "Targets", data: d[2], lines: { show: true, steps: true, lineWidth: 0, fill: .3 }, color: "#333" },
+	        { label: "Forecast", data: forecastSeries, bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: .5, fill: 1 }, color: "#C20C0C" },
+	        { label: "Bookings", data: d[3], bars: { show: true, barWidth: 1000*60*60*24*22, lineWidth: .5, fill: 1 }, color: "#333" }
+	      ];
+	 
+		  $.plot($("#chart"), data, {
+		    xaxis: { mode: "time", min: d[0], max: d[1], ticks: 5 },
+		    legend: { show: false }
+		  });
+			
+	    }
+	    
+	    setForecastSeries();
+	
+	  });
+	</script>
 </div>
+
 <div class="g320" style="margin-top:1em;">
 	<h1>
 		<span style="color:#333">Bookings</span><br>
 		<span style="color:#c20c0c">Forecast</span><br>
 		<span style="color:#B2B2B2">Targets</span>
-	</h1>	
-
+	</h1>
+	
+	<div id="chart_switcher">		
+		<%= radio_button_tag 'weight', 'weighted', true %><%= label_tag "weight_weighted", "Weighted", :class => "radio" %><br>
+		<%= radio_button_tag 'weight', 'unweighted' %><%= label_tag "weight_unweighted", "Un-weighted", :class => "radio" %><br>
+	    <br>		
+		<%= radio_button_tag 'freshness', 'fresh', true %><%= label_tag "freshness_fresh", "Fresh only", :class => "radio" %><br>
+		<%= radio_button_tag 'freshness', 'stale' %><%= label_tag "freshness_stale", "Include stale", :class => "radio" %>
+    </div><br>
 	<%= link_to 'Set Targets', polymorphic_path([@current_account, :targets]) %>
 </div>
-<div class="clear">&nbsp;</div>	
+<div class="clear">&nbsp;</div>
 
 	<table>
 		<thead>
@@ -37,6 +68,15 @@
 			</tr>
 		</thead>
 	  <caption>Recent Activity</caption>
+		<% @stale.each do |opportunity| %>
+		  <tr>
+		    <td style="color:#c20c0c; font-weight:bold">STALE</td>
+		    <td><%= opportunity.customer.name%></td>
+		    <td><%= opportunity.name %></td>
+		    <td style="text-align:right"><%= opportunity.order_value.format  %></td>
+		    <td><%= opportunity.user.nickname %></td>
+		  </tr>
+		<% end %>
 		<% @recent_wins.each do |opportunity| %>
 		  <tr>
 		    <td style="color:#333; font-weight:bold">WON</td>
@@ -48,7 +88,7 @@
 		<% end %>
 		<% @recent_losses.each do |opportunity| %>
 		  <tr>
-		    <td style="color:#333; font-weight:bold">lost</td>
+		    <td style="color:#B2B2B2; font-weight:bold">LOST</td>
 		    <td><%= opportunity.customer.name%></td>
 		    <td><%= opportunity.name %></td>
 		    <td style="text-align:right"><%= opportunity.order_value.format %></td>
@@ -57,7 +97,7 @@
 		<% end %>
 		<% @recent_dead.each do |opportunity| %>
 		  <tr>
-		    <td style="color:#333; font-weight:bold">dead</td>
+		    <td style="color:#B2B2B2; font-weight:bold">DEAD</td>
 		    <td><%= opportunity.customer.name%></td>
 		    <td><%= opportunity.name %></td>
 		    <td style="text-align:right"><%= opportunity.order_value.format %></td>
