--- a/public/stylesheets/s2l_red.css
+++ b/public/stylesheets/s2l_red.css
@@ -500,6 +500,13 @@ form input[type='submit'] {
     color: #999;
 }
 
+label.radio {
+  float: none;
+  text-align: left;
+  margin: 0px 2px;
+  font-weight: normal;
+}
+
 
 
 
